--- a/platforms/browser/www/includes/manasik/preview-perencanaan.html
+++ b/platforms/browser/www/includes/manasik/preview-perencanaan.html
@@ -101,7 +101,9 @@
 
 <div class="pusatriyal-submit btn-group">
   
-  <button class="btn btn-primary btn-md">
+  <button class="btn btn-primary btn-md" id="btn-edit" 
+    pusatriyal-role='routing' 
+    pusatriyal-target='includes/manasik/edit_perencanaan.html'pusatriyal-callback="edit_perencanaan_view">
     <i class="fa fa-pencil"></i>
   </button>
   <button class="btn btn-danger btn-md" id="btn-hapusperencanaan">
@@ -112,57 +114,57 @@
 <form id="login-form" class="form" action="" method="post" autocomplete="off" style="margin-bottom: 25mm">
 <input type="hidden" name="_token" id="_token">
 <input type="hidden" name="mp_id" id="mp_id">
-                            <div class="form-group">
-                                <label class="label-for" for="nota">Nota</label><br>
-                                <div class="border-bottom-1" id="mp_code">
-                                  <input type="text" readonly="" name="nota" id="nota" class="form-control-plaintext"  readonly>
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label class="label-for" for="tgl_kegiatan" >Tanggal Kegiatan</label><br>
-                                <div class="border-bottom border-bottom-1" id="tanggal">
-                                  <input type="text" readonly="" name="mp_date" id="tgl_kegiatan" class="form-control-plaintext" >
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label for="tempat_kegiatan" class="label-for">Tempat Kegiatan</label><br>
-                                <div class="border-bottom border-bottom-1" id="mp_place">
-                                  <input type="text" readonly="" name="tempat_kegiatan" id="tempat_kegiatan" class="form-control-plaintext" >
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label for="pic" class="label-for">PIC</label><br>
-                                <div class="border-bottom border-bottom-1" id="petugas_pic">
-                                  <input type="text" readonly="" name="pic" id="pic" class="form-control-plaintext" >
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label for="kegiatan" class="label-for">Kegiatan</label><br>
-                                <div class="border-bottom border-bottom-1" id="mp_plan_activity">
-                                  <input type="text" readonly="" name="kegiatan" id="kegiatan" class="form-control-plaintext"  >
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label for="pet_1" class="label-for">Petugas Kegiatan 1</label><br>
-                                <div class="border-bottom border-bottom-1" id="mp_employe1">
-                                  <input type="text" readonly="" name="pet_1" id="pet_1" class="form-control-plaintext"  >
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label for="pet_2" class="label-for">Petugas Kegiatan 2</label><br>
-                                <div class="border-bottom border-bottom-1"  id="mp_employe2">
-                                  <input type="text" readonly="" name="pet_2" id="pet_2" class="form-control-plaintext" >
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label for="pet_3" class="label-for">Petugas Kegiatan 3</label><br>
-                                <div class="border-bottom border-bottom-1"  id="mp_employe3">
-                                  <input type="text" readonly="" name="pet_3" id="pet_3" class="form-control-plaintext"  >
-                                </div>
-                            </div>
-                            <div class="form-group">
-                            </div>
-                        </form>
+    <div class="form-group">
+        <label class="label-for" for="nota">Nota</label><br>
+        <div class="border-bottom-1" id="mp_code">
+          <input type="text" readonly="" name="nota" id="nota" class="form-control-plaintext"  readonly>
+        </div>
+    </div>
+    <div class="form-group">
+        <label class="label-for" for="tgl_kegiatan" >Tanggal Kegiatan</label><br>
+        <div class="border-bottom border-bottom-1" id="tanggal">
+          <input type="text" readonly="" name="mp_date" id="tgl_kegiatan" class="form-control-plaintext" >
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="tempat_kegiatan" class="label-for">Tempat Kegiatan</label><br>
+        <div class="border-bottom border-bottom-1" id="mp_place">
+          <input type="text" readonly="" name="tempat_kegiatan" id="tempat_kegiatan" class="form-control-plaintext" >
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="pic" class="label-for">PIC</label><br>
+        <div class="border-bottom border-bottom-1" id="petugas_pic">
+          <input type="text" readonly="" name="pic" id="pic" class="form-control-plaintext" >
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="kegiatan" class="label-for">Kegiatan</label><br>
+        <div class="border-bottom border-bottom-1" id="mp_plan_activity">
+          <input type="text" readonly="" name="kegiatan" id="kegiatan" class="form-control-plaintext"  >
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="pet_1" class="label-for">Petugas Kegiatan 1</label><br>
+        <div class="border-bottom border-bottom-1" id="mp_employe1">
+          <input type="text" readonly="" name="pet_1" id="pet_1" class="form-control-plaintext"  >
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="pet_2" class="label-for">Petugas Kegiatan 2</label><br>
+        <div class="border-bottom border-bottom-1"  id="mp_employe2">
+          <input type="text" readonly="" name="pet_2" id="pet_2" class="form-control-plaintext" >
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="pet_3" class="label-for">Petugas Kegiatan 3</label><br>
+        <div class="border-bottom border-bottom-1"  id="mp_employe3">
+          <input type="text" readonly="" name="pet_3" id="pet_3" class="form-control-plaintext"  >
+        </div>
+    </div>
+    <div class="form-group">
+    </div>
+</form>
 
     <script type="text/javascript" src="includes/manasik/js/form-perencanaan-commander.js"></script>
 </div>
