--- a/platforms/android/app/src/main/assets/www/includes/distribusi/menu-distribusi-retail.html
+++ b/platforms/android/app/src/main/assets/www/includes/distribusi/menu-distribusi-retail.html
@@ -48,7 +48,7 @@
 <h5 class="title-edit">Kegiatan Distribusi Retail</h5>
 <div class="list-group list-group-flush">
   <a href="#" class="list-group-item list-group-item-action listx">Pencatatan Petugas</a>
-  <a href="#" class="list-group-item list-group-item-action listx">GPS Tracking</a>
+  <a pusatriyal-role="routing" pusatriyal-target="/includes/distribusi/gpsretail.html" class="list-group-item list-group-item-action listx">GPS Tracking</a>
 </div>
 
 </div>
