--- a/www/includes/manasik/pelaksanaan_manasik/tab_pelaksanaan_manasik/index-tab-pelaksanaan.html
+++ b/www/includes/manasik/pelaksanaan_manasik/tab_pelaksanaan_manasik/index-tab-pelaksanaan.html
@@ -67,8 +67,8 @@
     <div class="card-body">
       <h5 class="card-title">Card title</h4>
       <h6 class="card-subtitle" style="margin-bottom: 1mm">Some example text. Some example text.</h6>
-      <a href="#" class="badge badge-primary card-info-first">Card link</a>
-      <a href="#" class="badge badge-success card-info-second">Another link</a>
+      <a href="#" class="badge badge-info card-info-first">Card link</a>
+      <a href="#" class="badge card-info-second">Another link</a>
     </div>
   </rawcontent>
   <script type="text/javascript" src="includes/manasik/pelaksanaan_manasik/tab_pelaksanaan_manasik/js/index-tab-pelaksanaan-commander.js"></script>
