--- a/www/asset/css/alamraya-style.css
+++ b/www/asset/css/alamraya-style.css
@@ -272,12 +272,22 @@ fieldset{
 .pusatriyal-submit{
 	box-shadow: 1px 1px 3px 0 gray;
 }
-.accordion .card-header:after ~ .accordion .collapse.show{
-	content: "\f0d8";
+.accordion > .card .btn.collapsed:after{
+	font-family: 'FontAwesome';
+	content: "\f0d7";
+	top: 5px;
+	right: 5px;
+	position: absolute;
 }
-.menu-header .menu-notif > *{
-	vertical-align: middle;
-	display: inline-block;
-	white-space: nowrap;
-	margin: auto;
+.accordion > .card .btn:not(.collapsed):after,
+.accordion > .card .btn:after
+{
+	font-family: 'FontAwesome';
+	content: "\f0d8";
+	top: 5px;
+	right: 5px;
+	position: absolute;
+}
+.accordion{
+	position: inherit;
 }
