--- a/www/includes/stock/opname_stock/preview-opname.html
+++ b/www/includes/stock/opname_stock/preview-opname.html
@@ -148,7 +148,7 @@
     <div class="card">
       <div class="card-header bg-success header-collapse p-0" id="headingOne">
         <h5 class="mb-0">
-          <button class="btn btn-link btn-block btn-header text-white" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+          <button class="btn btn-link btn-block btn-header text-white collapsed" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
             BRG/0001 - 10 Riyal
           </button>
         </h5>
